# akarins-gateway

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml  start.bat  真·启动阿卡林集群服务.bat
akarins_gateway/: __init__.py  __main__.py  app.py  context_truncation.py  models.py  server.py  signature_cache.py  streaming_constants.py
akarins_gateway/augment_compat/: routes.py  types.py
akarins_gateway/cache/: async_write_queue.py  cache_facade.py  enable_phase2.py  memory_cache.py  signature_cache_manager.py  signature_database.py  test_cache.py  test_phase2_dual_write.py  test_phase3_integration.py
akarins_gateway/converters/: __init__.py  anthropic_constants.py  gemini_fix.py  message_converter.py  model_config.py  signature_recovery.py  tool_converter.py  tool_semantic_converter.py
akarins_gateway/core/: __init__.py  auth.py  config.py  constants.py  httpx_client.py  log.py  rate_limiter.py  tls_impersonate.py
akarins_gateway/gateway/: __init__.py  circuit_breaker.py  concurrency.py  config.py  config_loader.py  config_writer.py  conversion.py  health.py  http_error_logger.py  model_registry.py  normalization.py  proxy.py  rate_limit_handler.py  routing.py  scid.py  scid_generator.py  tool_loop.py  (+3 more)
config/: gateway.yaml
docs/: 2026-03-14-chain-drag-bug.md  antigravity-removal-plan.md
frontend/: index.html
scripts/: phase2_bulk_copy.py  phase3_gateway_copy.py  start-gcli2api-backend.cmd
tests/: conftest.py  test_config_persistence.py  test_integration.py  test_model_registry.py  test_panel_api.py  test_tool_semantic_converter.py  test_unit.py
(+48 files in other folders)
